--- a/module2/index.html
+++ b/module2/index.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Assingment Solution for Module 2</title>
+<link rel="stylesheet" href="module2ss.css">
+</head>
+<body>
 
+
+<h1>Our Menu</h1>
+
+<div  class="row">
+	
+	<div class ="pL1 pM1 pS1"><div class="section1"><h2 class ="chicken">Chicken</h2> <p> Chicken Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sit amet efficitur eros. Donec felis risus, luctus non arcu a, luctus consectetur felis. Vestibulum interdum libero ultrices faucibus imperdiet. Phasellus et malesuada orci. Ut vehicula fringilla erat, sit amet venenatis justo bibendum vitae. Nam lectus leo, ullamcorper ac hendrerit eget, maximus vitae neque. Fusce commodo non quam ullamcorper mollis. Vivamus laoreet pharetra eros, ut bibendum sem dictum ac. Fusce commodo lorem pharetra massa convallis, id tristique nisl tristique. Fusce ac tellus eget odio molestie gravida id a elit. Sed hendrerit ipsum sed nisi aliquet aliquet. Phasellus eu lectus id erat congue mollis nec nec quam. Fusce laoreet augue eget est egestas, vel euismod diam convallis. Sed vitae tempor risus, sed feugiat sem. Duis ullamcorper laoreet ligula sed pulvinar. Etiam consectetur ligula eu ullamcorper eleifend.</p></div></div>
+ 	<div class ="pL2 pM2 pS2"><div class="section2"><h2 class ="beef">Beef</h2><p>Beef Curabitur malesuada quam cursus odio dictum pulvinar eu a ligula. Praesent vel lectus eu lacus elementum porttitor eget eget lorem. Nulla a erat orci. Maecenas ac commodo sapien, ut consequat lorem. Maecenas ullamcorper, nunc et volutpat vulputate, dui augue scelerisque est, quis finibus elit odio ac lorem. Mauris imperdiet dictum ullamcorper. Fusce volutpat maximus tellus, eu consequat nisi faucibus sed. Phasellus convallis laoreet purus, eu malesuada erat feugiat at. Donec eget porttitor mauris. Nulla et mi vel est pretium faucibus sit amet vel dolor. Duis quis congue tortor. Suspendisse dui mi, molestie at ipsum ac, ultrices tincidunt odio. Pellentesque elementum bibendum nulla ut pellentesque. In enim ex, vehicula in rhoncus et, lacinia eu mi.</p></div></div>
+ 	<div class ="pL3 pM3 pS3"><div class="section3"><h2 class ="sushi">Sushi</h2><p>Sushi Nulla a diam fringilla, scelerisque elit vel, sollicitudin est. Suspendisse vulputate neque vitae dui ultricies eleifend. Sed vehicula, libero quis sodales sollicitudin, sem urna rhoncus metus, nec sollicitudin nibh urna sed nisi. Aenean dictum velit diam, eget elementum ipsum facilisis vitae. Donec sollicitudin lorem purus, non fringilla erat imperdiet nec. Fusce gravida tempor metus, quis semper lorem lobortis eu. Quisque vestibulum sapien eget diam congue, et pharetra sem condimentum. Integer et iaculis arcu, ut rhoncus magna. Sed sed consectetur ex, sit amet consectetur dui. Nulla a eros enim. Mauris commodo facilisis tortor quis faucibus. Nullam egestas lacus ac facilisis laoreet.</p></div></div>
+</div>
+ 
+
+
+
+</body>
+</html>
